--- a/chain_domain.vcxproj
+++ b/chain_domain.vcxproj
@@ -88,14 +88,14 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>MINIUPNP_STATICLIB;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>src;src/biz;src/blockchain;src/common;src/tinyxml2;src/net;src/net/http;src/net/bitcoin;src/net/cc;src/crypt;src/leveldb/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>src/lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>miniupnpc.lib;libeay32.lib;leveldbd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;miniupnpc.lib;libeay32.lib;leveldbd.lib;iphlpapi.lib;Shlwapi.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -166,6 +166,12 @@
     <ClCompile Include="src\common\endian.cpp" />
     <ClCompile Include="src\common\string_helper.cc" />
     <ClCompile Include="src\common\xml_config_parser.cc" />
+    <ClCompile Include="src\crypt\base64.cc" />
+    <ClCompile Include="src\crypt\cipher.cpp" />
+    <ClCompile Include="src\crypt\ripemd160.cpp" />
+    <ClCompile Include="src\crypt\sha1.cpp" />
+    <ClCompile Include="src\crypt\sha256.cpp" />
+    <ClCompile Include="src\crypt\sha512.cpp" />
     <ClCompile Include="src\error_code.cc" />
     <ClCompile Include="src\file.cc" />
     <ClCompile Include="src\loghelper.cc" />
@@ -224,6 +230,13 @@
     <ClInclude Include="src\common\string_helper.h" />
     <ClInclude Include="src\common\util.h" />
     <ClInclude Include="src\common\xml_config_parser.h" />
+    <ClInclude Include="src\crypt\base64.h" />
+    <ClInclude Include="src\crypt\cipher.h" />
+    <ClInclude Include="src\crypt\crypt_common.h" />
+    <ClInclude Include="src\crypt\ripemd160.h" />
+    <ClInclude Include="src\crypt\sha1.h" />
+    <ClInclude Include="src\crypt\sha256.h" />
+    <ClInclude Include="src\crypt\sha512.h" />
     <ClInclude Include="src\error_code.h" />
     <ClInclude Include="src\file.h" />
     <ClInclude Include="src\handle_alloc.h" />
