Change style for btn-primary

--- a/explorerv2/html/bootstrap/config.json
+++ b/explorerv2/html/bootstrap/config.json
@@ -66,9 +66,9 @@
     "@btn-default-color": "#333",
     "@btn-default-bg": "#fff",
     "@btn-default-border": "#ccc",
-    "@btn-primary-color": "#fff",
-    "@btn-primary-bg": "@brand-primary",
-    "@btn-primary-border": "darken(@btn-primary-bg, 5%)",
+    "@btn-primary-color": "#333",
+    "@btn-primary-bg": "#fff",
+    "@btn-primary-border": "#ccc",
     "@btn-success-color": "#fff",
     "@btn-success-bg": "@brand-success",
     "@btn-success-border": "darken(@btn-success-bg, 5%)",
